# spacebot

./: .dockerignore  .gitignore  .graphifyignore  .mcp.json.example  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  METRICS.md  PROJECT_INDEX.md  README.md  RUST_STYLE_GUIDE.md  SPACEUI_MIGRATION.md  build.rs  docker-entrypoint.sh  flake.nix  justfile  rust-toolchain.toml
.archon/: config.yaml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: authz-gate-conformance.md  code-doc-sync-auditor.md  dep-spec-auditor.md  dependabot-triager.md  fmt-drift-detector.md  integration-test-coverage-auditor.md  migration-writer.md  openapi-typegen-verifier.md  phase-plan-auditor.md  security-reviewer.md  skill-drift-auditor.md  spaceui-token-conformance.md  tracing-log-contract.md  write-path-sweep-verifier.md
.claude/rules/: api-handler.md  async-state-safety.md  coding-discipline.md  messaging-adapter-parity.md  provider-integration.md  rust-essentials.md  rust-iteration-loop.md  rust-patterns.md  tool-authoring.md  writing-guide.md
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  desktop-ci.yml  docker-compose.yml  interface-ci.yml  release.yml  spaceui.yml  zizmor.yml
.serena/: project.yml
.serena/memories/: phase_11_pr_1_shipped.md  phase_11_pr_2_shipped.md  phase_8_pr_a_shipped.md  project_overview.md  project_structure.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
deploy/docker/: .env.example  Caddyfile  README.md  alloy-config.alloy  config.toml  dbtools.Dockerfile  docker-compose.yml  litellm_config.yaml  prometheus.yml
desktop/: CLAUDE.md
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: auth.rs  auth_tests.rs  main.rs
docs/: README.md  docker.md  metrics.md  package.json  pnpm-lock.yaml
docs/design-docs/: agent-factory.md  branch-and-spawn.md  conversation-settings.md  cortex-chat.md  cron-outcome-delivery.md  desktop-sidecar.md  docker-compose-variant.md  entra-access-matrix.md  entra-app-registrations.md  entra-architecture-diagram.md  entra-audit-log.md  entra-backfill-strategy.md  entra-role-permission-matrix.md  k8s-cluster-deployment.md  k8s-helm-scaffold.md  launch-script.md  launch-tweet.md  postgres-migration.md  preset-authoring.md  production-worker-failures.md  spacedrive-integration-pairing.md  spacedrive-tool-response-envelope.md  spacedrive-vendoring.md  working-memory-implementation-plan.md
docs/lib/: layout.shared.tsx
docs/runbooks/: entra-auth-incidents.md  entra-change-management.md
interface/: CLAUDE.md  DRY_VIOLATIONS.md  PLAN.md  package.json  vite.config.ts  vitest.config.ts
migrations/: 20260211000001_memories.sql  20260211000002_conversations.sql  20260211000004_compaction.sql  20260212000001_forgotten_memories.sql  20260212000002_memory_created_at_index.sql  20260213000001_channels.sql  20260213000002_cron_jobs.sql  20260213000003_process_runs.sql  20260213000004_cortex_events.sql  20260213000005_cortex_chat.sql  20260213000006_cortex_chat_threads.sql  20260215000001_ingestion_progress.sql  20260215000002_ingestion_files.sql  20260216000001_agent_profile.sql  20260219000001_tasks.sql  20260220000001_cron_timeout.sql  20260220000002_cron_run_once.sql  20260223000001_worker_transcript.sql  20260224000001_worker_tool_calls.sql  20260226000001_cron_expression.sql  20260303000001_opencode_worker_metadata.sql  20260305000001_worker_interactive.sql  20260305000002_worker_directory.sql  20260306000001_saved_attachments.sql  20260306000002_saved_attachments_unique_filename.sql  20260306000003_projects.sql  20260306000004_worker_project_link.sql  20260306000005_project_disk_usage.sql  20260306000006_project_repo_current_branch.sql  20260307000001_cortex_chat_tool_calls.sql  20260319000001_working_memory.sql  20260324000001_webchat_conversations.sql  20260325120000_rename_webchat_to_portal.sql  20260325130000_add_portal_conversation_settings.sql  20260328000001_channel_settings.sql  20260329105813_cron_next_run.sql  20260329143500_cron_execution_delivery_status.sql  20260404000001_projects_global.sql  20260404000002_project_logo.sql  20260404120000_drop_per_agent_projects.sql  (+1 more)
nix/: default.nix
openspec/: CLAUDE.md
scripts/: build-opencode-embed.sh  bundle-docs.sh  bundle-sidecar.sh  check-adr-anchors.sh  check-sidecar-naming.sh  check-vite-dedupe.sh  check-workspace-protocol.sh  fetch-fastembed.sh  gate-pr.sh  generate-access-matrix.sh  graphify-rebuild.sh  preflight.sh  release-tag.sh
spacedrive/: .dockerignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SYNC.md  TODO
spaceui/: CLAUDE.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  README.md  SYNC.md  package.json  tsconfig.base.json
src/: admin.rs  anthropic_oauth.rs  api.rs  audit.rs  auth.rs  cli.rs  config.rs  daemon.rs  db.rs  dialect.rs  error.rs  github_copilot_auth.rs  lib.rs  main.rs  mcp.rs  notifications.rs  opencode.rs  prompts.rs  spacedrive.rs  tools.rs  update.rs
src/api/: cron.rs  (+32 more)
tests/: api_admin_access_review.rs  api_admin_audit.rs  api_admin_claim.rs  api_admin_orphans.rs  api_admin_teams.rs  api_agents_authz.rs  api_attachments_authz.rs  api_auth_config.rs  api_auth_middleware.rs  api_cron_authz.rs  api_desktop_tokens.rs  api_desktop_tokens_delete.rs  api_desktop_tokens_get.rs  api_ingest_authz.rs  api_me.rs  api_memories_authz.rs  api_notifications_authz.rs  api_portal_authz.rs  api_projects_authz.rs  api_resource_visibility.rs  api_tasks_authz.rs  api_teams.rs  api_wiki_authz.rs  audit_chain.rs  audit_export.rs  audit_handler_emission.rs  audit_middleware_emission.rs  audit_scrubbing.rs  auth_scope.rs  authz_data_model.rs  branch_inherits_auth_context.rs  bulletin.rs  channel_turn_deps.rs  cli_authed_client.rs  cli_login_unit.rs  cli_token_store_unit.rs  context_dump.rs  detached_worker_bootstrap.rs  dialect_adapter.rs  entra_jwt_middleware.rs  (+11 more)
(+541 files in other folders)
