[package]
name = "spacebot"
version = "0.6.4"
edition = "2024"
default-run = "spacebot"

[dependencies]
# Core async runtime
tokio = { version = "1.44", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM / Rig framework
rig = { version = "0.35", package = "rig-core", features = ["derive"] }

# HTTP clients for LLM providers
reqwest = { version = "0.13", features = ["json", "stream", "form", "query", "gzip"] }

# Auth: Entra JWT validation with JWKS caching and OIDC discovery.
jwt-authorizer = "0.15"
# Required for Algorithm::RS256 (NOT re-exported by jwt-authorizer).
jsonwebtoken = "9"

# Databases
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "chrono", "uuid"] }
lancedb = "0.27"
lance-index = "4.0"
redb = "4.1"

# Vector / embedding operations. Optional so non-memory-touching dev builds
# can opt out via `--no-default-features` to skip the ~5-10 minute ort-sys
# C++ toolchain build. `embeddings` feature is on by default; production
# builds and CI must keep it enabled.
#
# Exact-pinned to 5.13.2. The 5.13.3 bump pulled in hf-hub 0.5.0 which
# changed the ONNX model fetch path and silently broke 8 memory tests
# (memory::search::*, memory::maintenance::*). Relax this to caret once
# the hf-hub 0.5 regression lands upstream or a fix ships in fastembed.
fastembed = { version = "=5.13.3", optional = true }

# Encoding
base64 = "0.22"
hex = "0.4"

# Compression
flate2 = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# Configuration
dirs = "6.0"
directories = "6"
config = "0.15"
toml = "1.1"
toml_edit = "0.25"
arc-swap = "1"
notify = "8"

# Cryptography (for secrets)
aes-gcm = "0.11.0-rc.3"
sha2 = "0.11"
argon2 = "0.6.0-rc.8"
rand = "0.10"
subtle = "2"

# UUID generation
uuid = { version = "1.15", features = ["v4", "v7", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.16"

# Regular expressions (for leak detection)
regex = "1.11"

# Async utilities
futures = "0.3"
pin-project = "1"

# Schema validation
schemars = "1.2"
rmcp = { version = "1.5", features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# Command line (for main.rs)
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", features = ["password"] }

# Daemonization
daemonize = "0.5"
libc = "0.2"
ignore = "0.4"

# Discord
# Pinned to a specific commit on serenity's `next` branch. Using `branch = "next"`
# causes `cargo update` to re-fetch on every lockfile check and invalidates
# downstream incremental cache when the branch tip moves. Bump the rev manually
# when we want upstream changes.
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "1cbceb275b10566145b0bdca1c57da9502079a6a", default-features = false, features = ["gateway", "model", "cache", "chrono", "rustls_backend"] }
async-trait = "0.1"

# Slack
slack-morphism = { version = "2.19", features = ["hyper"] }
emojis = "0.8"

# TLS (shared crypto backend for slack-morphism, reqwest, teloxide)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# Telegram
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }

# Twitch
twitch-irc = { version = "6.0", default-features = false, features = ["transport-tcp-rustls-webpki-roots", "refreshing-token-rustls-webpki-roots"] }

# Email
imap = "2.4"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
mailparse = "0.16"
native-tls = "0.2"

# Stream utilities
tokio-stream = "0.1"

# HTTP server for control UI
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
async-stream = "0.3"

# OpenAPI / utoipa
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Indoc for test fixtures
indoc = "2"
arrow-array = "57"
arrow-schema = "57"

# Browser automation
chromiumoxide = { version = "0.9", features = ["fetcher", "rustls", "zip8"], default-features = false }
chromiumoxide_cdp = "0.9"

# Templating for prompts
minijinja = "2.8"

# Docker API client (for self-update via Docker socket)
bollard = "0.20"

# Semver parsing (for update version comparison)
semver = "1"

# Skill installation
zip = "8"
tempfile = "3"

# Prometheus metrics (optional, behind "metrics" feature)
prometheus = { version = "0.14", optional = true }
pdf-extract = "0.10.0"
open = "5.3.4"
urlencoding = "2.1.3"
url = "2"
moka = "0.12.13"

[features]
default = ["embeddings"]

# Vector embeddings via fastembed + ort (ONNX Runtime C++ bindings). Disabling
# this drops ~5-10 min of cold-cache compilation by skipping the ort-sys build.
# Disabled mode is for dev iteration ONLY — vector similarity ranking degrades
# to deterministic zero vectors, so RRF hybrid search falls back to Tantivy FTS
# only. Release builds and CI must enable this feature.
embeddings = ["dep:fastembed"]

metrics = ["dep:prometheus"]

# Enable OTLP/gRPC transport for trace export (pulls in tonic + prost + tower).
# Default builds remain HTTP-only (no binary bloat). Required when operators set
# OTEL_EXPORTER_OTLP_PROTOCOL=grpc; without this feature, that value disables
# OTLP with a clear error rather than silently falling back to HTTP.
#
# Current limitations (tracked as follow-up issues):
# - gRPC over HTTPS is not supported (plaintext only; in-cluster Alloy/Tempo OK).
# - OTEL_EXPORTER_OTLP_HEADERS are not propagated to the gRPC exporter.
otlp-grpc = ["opentelemetry-otlp/grpc-tonic"]

[patch.crates-io]
imap-proto = { path = "vendor/imap-proto-0.10.2" }

# Spacebot has no [workspace] members today, so the workspace boundary is
# implicit. If [workspace] is later extended (for shared lints, etc.), Cargo
# would auto-discover spacedrive/Cargo.toml, which declares its own workspace
# with crates this one does not have, and resolution would fail. This explicit
# exclude pins the boundary now so a future [workspace] extension is safe.
# spaceui/ has no Cargo.toml (pure Bun) and desktop/src-tauri/ is nested too
# deep for auto-discovery, so neither needs its own exclude.
[workspace]
exclude = ["spacedrive"]

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[dev-dependencies]
tokio-test = "0.4"
parking_lot = "0.12"
wiremock = "0.6"
# Integration-test-only: `tower::ServiceExt::oneshot` drives the Axum router
# in-process without binding a TCP listener. `http-body-util` collects the
# response body for assertions. Both are already transitive deps via axum;
# declaring them here makes the test files' imports explicit.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Pure-Rust RSA keypair generation for Wiremock-backed Entra tests.
# Avoids the system libssl dependency that `openssl` would require (A-07).
# `getrandom` feature exposes `rsa::rand_core::OsRng` so tests don't need a
# separate `rand_core = "0.6"` dep (the project's `rand = "0.10"` uses
# rand_core 0.9 which is incompatible with rsa 0.9's RsaPrivateKey::new).
rsa = { version = "0.9", features = ["sha2", "getrandom"] }
# Postgres integration tests (Phase 11.2). Spins up `postgres:16-alpine` in
# Docker for `tests/instance_postgres.rs`. Requires Docker daemon at runtime;
# tests are gated behind `#[ignore]` or runtime-skip when Docker is absent so
# `cargo test --lib` continues to pass in environments without Docker.
#
# testcontainers 0.27 selected (vs the plan's stated 0.23) because it shares
# `bollard = 0.20` with the project's existing self-update direct-dep. The
# 0.23 line wants bollard 0.18 and cargo refuses to coexist two semver-major
# bollard branches in this dep graph. testcontainers 0.27's MSRV (1.88) is
# satisfied by our 1.94 toolchain.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# OS keystore (macOS Keychain for master key storage)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[[bin]]
name = "openapi-spec"
path = "src/bin/openapi_spec.rs"

[profile.release]
lto = "thin"
strip = true

[profile.dev]
# Incremental stays on — 2026 consensus for single-machine dev loops.
incremental = true
# line-tables-only keeps backtraces useful (filenames, line numbers) while
# cutting target/debug/incremental size ~50-70% and the debug binary from
# ~555 MB to ~170 MB. If you need full debugger variable/type inspection,
# override per-session: CARGO_PROFILE_DEV_DEBUG=2 cargo build (or `just
# debug-build`).
debug = "line-tables-only"
# Already the macOS default since Cargo 1.51; declared explicitly so Linux
# contributors get the same fast-link behaviour by default.
split-debuginfo = "unpacked"

# Dependencies get a mild optimisation pass. opt-level=1 preserves cross-crate
# monomorphisation sharing that opt-level=2/3 would break. One-time cost on
# first build, pays back on every iteration.
[profile.dev.package."*"]
opt-level = 1

# Build scripts and proc-macros compile once per toolchain. Fully optimising
# them speeds every build.rs invocation (notably ort-sys's heavy C++ build).
[profile.dev.build-override]
opt-level = 3
codegen-units = 1

# Test profile mirrors dev's tuning: line-tables-only is plenty for panic
# backtraces, and per-dep opt-level=1 speeds `cargo test --tests --no-run`
# (the dominant step in gate-pr, ~30-60s warm cache).
[profile.test]
debug = "line-tables-only"

[profile.test.package."*"]
opt-level = 1

# Benchmarks need real optimization — inherit the release pipeline wholesale.
[profile.bench]
inherits = "release"
